variables.Variables.scala.error
Compilation error:
Variables:3: error: not found: value isOverbaggle
if (isOverbaggle()) {}
    ^